@@ -24,6 +24,7 @@ Version 2.2.0mtn:
 	* Fixed building with ancient glib. (Bodo Bellut)
 	* Removed the .build file from hideconv to remove it from default
 	  builds.  Pidgin will have persistent conversations soon.
+	* Added dewysiwygification plugin
 
 Version 2.1.1: 8/19/07
 	* Fixed lack of .build, .pidgin-plugin, and Makefile.mingw for convbadger
